# django-cookiecutter

./: LICENSE  README.md  cookiecutter.json
src/: pyproject.toml
src/demo/: manage.py  pyproject.toml
src/demo/config/: settings.toml
src/demo/config/settings/: __init__.py
src/demo/config/settings/components/: common.py  db.py  rest.py
src/demo/config/urls/: __init__.py  rest.py
src/demo/demo/: _settings.py
src/demo/demo/settings/: __init__.py
