[build-system]
requires = ["poetry==0.12.17"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "demo"
description = "demo"
version = "0.1.0"
readme = "README.md"
authors = []


[tool.poetry.dependencies]
python = "3.7.3"

django = "^2.2"
django-split-settings = "^0.3"
django-axes = "^5.0"
django-csp = "^3.5"
django-health-check = "^3.10"
django-feature-policy = "^2.3"
django-allauth = "^0.39"
django-organizations = "^1.1"
django-extensions = "^2.1"
django-countries = "^5.3"
django-tables2 = "^2.0"
django-bootstrap-form = "^3.4"
django-ratelimit = "^2.0"
django-mptt = "^0.10"
Pillow = "^6.1"
easy-thumbnails = "^2.6"
channels = "^2.2"
django-reactor = { version = "^1.2.7b0", allows-prereleases = true }
django-concurrency = "^2.0"

# REST
django-cors-headers = "^3.0"
djangorestframework = "^3.9"
djangorestframework-filters = "^0.11"
django-rest-auth = "^0.9"
djangorestframework_simplejwt = "^4.3"

# GraphQL
graphene-django = "^2.3"

# Jobs
dramatiq = "^1.6"
django-dramatiq = "^0.7"
APScheduler = "^3.6"

psycopg2-binary = "^2.8"
gunicorn = "^19.9"

# Utils
pydash = "^4.7"
ujson = "^1.3"
beautifulsoup4 = "^4.7"
lxml = "^4.3"
attrs = "^19.1"
cattrs = "^0.9"
requests = "^2.22"
bcrypt = "^3.1"
punq = "^0.2"
arrow = "^0.14"
jsonschema = "^3.0"
marshmallow = "^2.19"
furl = "^2.0"
purl = "^1.5"
python-box = "^3.4"
raven = "^6.10"
gevent = "^1.4"
pampy = "^0.2"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.0"
django-querycount = "^0.7"
#nplusone = "^1.0"
#wemake-python-styleguide = "^0.9"
#flake8-pytest = "^1.3"
#flake8-django = "^0.0.4"
pytest = "^4.6"
pytest-django = "^3.5"
pytest-cov = "^2.7"
pytest-randomly = "^3.0"
pytest-deadfixtures = "^2.1"
pytest-testmon = "^0.9"
pytest-timeout = "^1.3"
#pre-commit = "^1.17"
#xenon = "^0.5"
mypy = "^0.711"
ipython = "^7.6"
ipdb = "^0.12"
#sphinx = "^2.1"
#sphinx-autodoc-typehints = "^1.6"
#doc8 = "^0.8"
yamllint = "^1.15"
#safety = "^1.8"
dotenv-linter = "^0.1"
#polint = "^0.4"
#dennis = "^0.9"
isort = "^4.3"
PySnooper = "^0.2"
black = { version = "^19.3b0", allows-prereleases = true }
